--- a/fullStack/todo/docker-compose.yml
+++ b/fullStack/todo/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.9"
 
 services:
+  db:
+    image: postgres:17-alpine
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: todouser
+      POSTGRES_PASSWORD: todopassword
+      POSTGRES_DB: tododb
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./data:/var/lib/postgresql/data
+
   frontend:
     build:
       context: ./frontend
@@ -16,3 +28,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    depends_on:
+      - db
+    environment:
+      DATABASE_URL: "postgresql://todouser:todopassword@db:5432/tododb?schema=public"
