--- a/fullStack/todo/backend/package.json
+++ b/fullStack/todo/backend/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "uuid": "^13.0.0"
   },
@@ -26,7 +27,7 @@
     "@types/node": "^25.3.0",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
-    "prisma": "^7.4.0",
+    "prisma": "^6.19.2",
     "tsx": "^4.21.0"
   }
 }
