--- a/render.yaml
+++ b/render.yaml
@@ -37,8 +37,8 @@ services:
     name: todo-backend
     plan: free
     env: docker
-    dockerfilePath: ./backend/Dockerfile
-    dockerContext: ./backend
+    rootDir: backend
+    dockerfilePath: ./Dockerfile
     healthCheckPath: /
     envVars:
       # Connexion a la base de donnees (injectee automatiquement par Render)
